# ISROBAH

./: .dockerignore  .gitignore  DATA.md  Dockerfile  HIMADRI_Implementation_Methodology_Notes.docx  HOSTING.md  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
config/: config.yaml  real_faustini.yaml
data/outputs/: ice_probability.tif  ice_target_mask.tif  ice_uncertainty.tif  landing_sites.gpkg  landing_suitability.tif  metrics.json  report.html  traverse.gpkg  traverse_waypoints.gpkg  volume_report.json
data/outputs/features/: cpr_L.tif  dop_L.tif  doubly_shadowed_mask.tif  illumination_frac.tif  ls_ratio.tif  mchi_volume_L.tif  psr_mask.tif  roughness.tif  slope_deg.tif
data/outputs/real/: cpr_L.tif  dop_L.tif  mchi_volume_frac_L.tif  s0_L.tif
data/outputs/real_faustini/: ice_probability.tif  ice_target_mask.tif  ice_uncertainty.tif  landing_sites.gpkg  landing_suitability.tif  report.html  traverse.gpkg  traverse.json  traverse_waypoints.gpkg  volume_report.json
data/synthetic/: dem.tif  dfsar_L_stokes.tif  dfsar_S_stokes.tif  ohrc.tif  truth_ice_fraction.tif  truth_ice_mask.tif
src/himadri/: __init__.py  api.py  cli.py  config.py  grid.py  pipeline.py  types.py
src/himadri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/himadri/detect/: classifier.py  fusion.py  (+3 more)
tests/: conftest.py  test_detection.py  test_e2e.py  test_polarimetry.py  test_separation.py  test_volume_planner.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css
(+36 files in other folders)
